--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "bdd-api-tester",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "Base for testing APIs with Cucumber",
   "main": "src/index.js",
   "scripts": {
-    "build": "jsdoc2md --partial jsdoc/scope.hbs --partial jsdoc/header.hbs --files src/steps.js> STEPS.md",
+    "prepublish": "jsdoc2md --partial jsdoc/scope.hbs --partial jsdoc/header.hbs --files src/steps.js> step-reference.md && jsdoc2md --files src/world.js> world-api.md",
     "start": "node test/server",
     "test": "BASE_URL=http://localhost:3000 API_SPEC_FILE=test/openapi.yaml cucumber-js test"
   },
@@ -25,6 +25,7 @@
   },
   "devDependencies": {
     "body-parser": "^1.18.3",
+    "cookie-parser": "^1.4.3",
     "cucumber": "^5.0.1",
     "express": "^4.16.3",
     "jsdoc-to-markdown": "^4.0.1"
