feat: Generalized support for better authentication
Added the following new steps:

1. `/^I am an? "([^"]*)"$/` E.g. "Given I am an "admin".

...which will explicity create a SuperAgent agent that can be reused
across scenarios. This is useful so that actions like requesting an oauth2
bearer token are repeated when they only need to be performed onnce.

This also is part of an effort to simplify code responsible for setting and
reusing agents. The previous approach tried to make it implicit, but I think
was confusing and in some scenarios not reliable due to the way we generated
the agent's dictionary key.

2. `I am using basic authentication using credentials from: {string}` and
`I am using basic authentication with the credentials:` plus short forms.

Adds support for Basic auth

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@harver/bat",
-  "version": "0.7.0",
+  "version": "0.8.0",
   "description": "A Gherkin based DSL for testing HTTP APIs via Cucumber.JS.",
   "main": "src/index.js",
   "scripts": {
@@ -9,7 +9,8 @@
     "start": "node test/server",
     "cucumber": "LATENCY_BUFFER=1000 ENV_FILE=test/env/dev.json API_SPEC_FILE=test/openapi.yaml cucumber-js test",
     "test": "./run-tests.sh",
-    "release": "standard-version"
+    "release": "standard-version",
+    "examples" : "cucumber-js examples"
   },
   "standard-version": {
     "message": "chore: Release v%s",
