--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "chalk": "^2.4.2",
     "cookie": "^0.4.0",
     "jsonpath-plus": "^1.0.0",
+    "node-vault": "^0.9.21",
     "openapi-schema-to-json-schema": "^2.2.0",
     "superagent": "^5.1.0",
     "superagent-graphql": "^0.1.2",
@@ -42,7 +43,7 @@
     "basic-auth": "^2.0.1",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.4",
-    "cucumber": "^5.1.0",
+    "cucumber": "^6.0.5",
     "eslint": "^6.3.0",
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
@@ -52,6 +53,6 @@
     "standard-version": "^7.0.0"
   },
   "peerDependencies": {
-    "cucumber": "5.x"
+    "cucumber": "6.x"
   }
 }
