--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "chai-match": "^1.1.1",
     "chalk": "^2.4.2",
     "cookie": "^0.4.0",
+    "json-colorizer": "^2.2.2",
     "jsonpath-plus": "^1.0.0",
     "openapi-schema-to-json-schema": "^2.2.0",
     "superagent": "^5.1.0",
